--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.apprecetas">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/enano"
@@ -22,6 +22,10 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".View.NewAccountActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".View.ListarRecetas"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme" />
     </application>
