--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,19 @@
             android:name=".View.ListarRecetas"
             android:label="@string/title_activity_menu"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".View.SearchActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".View.RecipeActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".View.AddRecipeActivity"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/AppTheme" />
     </application>
+
 
 </manifest>
